--- a/public/style.css
+++ b/public/style.css
@@ -123,6 +123,14 @@ ul {
 .infos {
   height: 15%;
   margin: 0;
+  padding: 10px 20px 10px 20px;
+  font-size: 180%;
+  text-align: center;
+}
+
+.notification {
+  height: 10%;
+  margin: 0;
   overflow-y: scroll;
   padding: 10px 20px 10px 20px;
   font-size: 180%;
@@ -130,7 +138,7 @@ ul {
 }
 
 .messages {
-  height: 85%;
+  height: 75%;
   margin: 0;
   overflow-y: scroll;
   padding: 10px 20px 10px 20px;
